Header border-box fix to not overflow viewport

--- a/simple.css
+++ b/simple.css
@@ -80,6 +80,7 @@ header {
   padding: 2rem .5rem;
   width: 100vw;
   position: relative;
+  box-sizing: border-box;
   left: 50%;
   right: 50%;
   margin-left: -50vw;
